# Star-shaped-Cpp-Master

./: .gitignore  CMakeLists.txt  README.md
include/: Ethercat_Hardware_Interface.hpp  Star_Center.hpp  Star_Manager.hpp  data_structuring.hpp  slaves_state_struct.hpp
src/: Ethercat_Hardware_Interface.cpp  Star.cpp  Star_Center.cpp  Star_Manager.cpp  data_structuring.cpp
tests/: CMakeLists.txt  test_Star_Manager.cpp  test_data_structuring.cpp
